# jiit-pvq

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/routers/: index.py  mailer.py
app/static/data/: subjects.json
app/static/scripts/: main.js
app/static/styles/: index.css
app/templates/: index.html
app/utils/: ocr.py
